# ComfyUI-DiffusersImageOutpaint

./: Diffusers-Outpaint-DoubleWorkflow.json  Diffusers-Outpaint-RealXL_Checkpoint-Loader-Simple.json  Diffusers-Outpaint-Workflow.json  README.md  __init__.py  controlnet_union.py  diffusers-image-outpaint-workflow.json  nodes.py  pipeline_fill_sd_xl.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: publish.yml
DiffusersImageOutpaint_Scripts/: pipeline_fill_sd_xl.py
configs/controlnet-sdxl-promax/: config.json  config_promax.json
configs/sdxl/scheduler/: scheduler_config.json
configs/sdxl/unet/: config.json
